<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="8dp">

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			app:contentPadding="5dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/intro_5_1"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp">

			<ImageView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/silver"
				android:scaleType="fitCenter"
				android:contentDescription="@string/img"
				android:src="@drawable/intro_8"/>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			app:contentPadding="5dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/intro_5_2"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
		</android.support.v7.widget.CardView>

		<Button
			android:id="@+id/btnBegin"
			android:layout_width="match_parent"
			android:layout_height="60dp" android:text="@string/lets_begin"/>
	</LinearLayout>

</ScrollView>