<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context=".ui.activities.MainActivity">

	<android.support.design.widget.AppBarLayout
		android:id="@+id/app_bar"
		android:layout_width="match_parent"
		android:layout_height="200dp"
		android:fitsSystemWindows="true"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.design.widget.CollapsingToolbarLayout
			android:id="@+id/toolbar_layout"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:fitsSystemWindows="true"
			app:contentScrim="?attr/colorPrimary"
			app:expandedTitleTextAppearance="@style/ExpandedAppBar"
			app:layout_scrollFlags="scroll|exitUntilCollapsed|snap">

			<ImageView
				android:id="@+id/banner"
				android:layout_width="match_parent"
				android:layout_height="match_parent"
				android:contentDescription="@string/img"
				android:fitsSystemWindows="true"
				android:scaleType="fitXY"
				android:src="@drawable/banner"
				app:layout_collapseMode="parallax"/>

			<android.support.v7.widget.Toolbar
				android:id="@+id/toolbar"
				android:layout_width="match_parent"
				android:layout_height="?attr/actionBarSize"
				app:layout_collapseMode="pin"
				app:popupTheme="@style/AppTheme.PopupOverlay"/>

		</android.support.design.widget.CollapsingToolbarLayout>
	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="5dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="10dp"
				android:text="@string/prompt1"
				android:textAppearance="@style/MainActivityTitle"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:clickable="true"
					android:foreground="?selectableItemBackground"
					android:onClick="showMap"
					app:cardBackgroundColor="@color/sand"
					app:cardElevation="5dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="@color/east_bay_blue"
							android:padding="10dp"
							android:text="@string/map"
							android:textAppearance="@style/MainActivityCardTitle"/>

						<ImageView
							android:layout_width="match_parent"
							android:layout_height="150dp"
							android:contentDescription="@string/img"
							android:scaleType="fitCenter"
							android:src="@drawable/map"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:padding="10dp"
							android:text="@string/map_desc"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textStyle="italic"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:clickable="true"
					android:foreground="?selectableItemBackground"
					android:onClick="showQrcode"
					app:cardBackgroundColor="@color/sand"
					app:cardElevation="5dp">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="@color/east_bay_blue"
							android:padding="10dp"
							android:text="@string/qrcode"
							android:textAppearance="@style/MainActivityCardTitle"/>

						<ImageView
							android:layout_width="match_parent"
							android:layout_height="150dp"
							android:contentDescription="@string/img"
							android:scaleType="fitCenter"
							android:src="@drawable/qrcode"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:padding="10dp"
							android:text="@string/qrcode_desc"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textStyle="italic"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>
			</LinearLayout>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="10dp"
				android:text="@string/prompt2"
				android:textAppearance="@style/MainActivityTitle"/>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:clickable="true"
				android:foreground="?selectableItemBackground"
				android:onClick="showObjectives"
				app:cardBackgroundColor="@color/sand">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@color/east_bay_blue"
						android:padding="10dp"
						android:text="@string/myobjectives"
						android:textAppearance="@style/MainActivityCardTitle"/>

					<ImageView
						android:layout_width="match_parent"
						android:layout_height="150dp"
						android:contentDescription="@string/img"
						android:scaleType="fitCenter"
						android:src="@drawable/objective"/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="10dp"
						android:text="@string/objectives_desc"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textStyle="italic"/>
				</LinearLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_margin="5dp"
				android:clickable="true"
				android:foreground="?selectableItemBackground"
				android:onClick="showPois"
				app:cardBackgroundColor="@color/sand">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@color/east_bay_blue"
						android:padding="10dp"
						android:text="@string/pois"
						android:textAppearance="@style/MainActivityCardTitle"/>

					<ImageView
						android:layout_width="match_parent"
						android:layout_height="150dp"
						android:contentDescription="@string/img"
						android:scaleType="fitCenter"
						android:src="@drawable/poi"/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="10dp"
						android:text="@string/pois_desc"
						android:textAppearance="?android:attr/textAppearanceSmall"
						android:textStyle="italic"/>
				</LinearLayout>
			</android.support.v7.widget.CardView>

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginLeft="10dp"
				android:layout_marginTop="10dp"
				android:text="@string/prompt3"
				android:textAppearance="@style/MainActivityTitle"/>

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:clickable="true" android:onClick="showAchievements"
					android:foreground="?selectableItemBackground"
					app:cardBackgroundColor="@color/sand">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="@color/east_bay_blue"
							android:padding="10dp"
							android:text="@string/achievements"
							android:textAppearance="@style/MainActivityCardTitle"/>

						<ImageView
							android:layout_width="match_parent"
							android:layout_height="150dp"
							android:contentDescription="@string/img"
							android:scaleType="fitCenter"
							android:src="@drawable/achievement"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:padding="10dp"
							android:text="@string/achievements_desc"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textStyle="italic"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>

				<android.support.v7.widget.CardView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_margin="5dp"
					android:layout_weight="1"
					android:clickable="true"
					android:onClick="showShare"
					android:foreground="?selectableItemBackground"
					app:cardBackgroundColor="@color/sand">

					<LinearLayout
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:orientation="vertical">

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:background="@color/east_bay_blue"
							android:padding="10dp"
							android:text="@string/share"
							android:textAppearance="@style/MainActivityCardTitle"/>

						<ImageView
							android:layout_width="match_parent"
							android:layout_height="150dp"
							android:contentDescription="@string/img"
							android:scaleType="fitCenter"
							android:src="@drawable/share"/>

						<TextView
							android:layout_width="match_parent"
							android:layout_height="wrap_content"
							android:padding="10dp"
							android:text="@string/share_desc"
							android:textAppearance="?android:attr/textAppearanceSmall"
							android:textStyle="italic"/>
					</LinearLayout>
				</android.support.v7.widget.CardView>
			</LinearLayout>

		</LinearLayout>
	</android.support.v4.widget.NestedScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_margin="@dimen/fab_margin"
		android:src="@drawable/ic_info"
		app:layout_anchor="@id/app_bar"
		app:layout_anchorGravity="bottom|end"/>

</android.support.design.widget.CoordinatorLayout>
