<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:padding="8dp">

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			app:contentPadding="5dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/intro_3_1"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			app:contentPadding="5dp">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:orientation="horizontal">

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="220dp"
					android:layout_weight="1"
					android:background="@color/silver"
					android:contentDescription="@string/img"
					android:scaleType="fitCenter"
					android:src="@drawable/intro_5"/>

				<ImageView
					android:layout_width="match_parent"
					android:layout_height="220dp"
					android:layout_weight="1"
					android:background="@color/silver"
					android:contentDescription="@string/img"
					android:scaleType="fitCenter"
					android:src="@drawable/intro_6"/>
			</LinearLayout>
		</android.support.v7.widget.CardView>

		<android.support.v7.widget.CardView
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginBottom="5dp"
			app:contentPadding="5dp">

			<TextView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/intro_3_2"
				android:textAppearance="?android:attr/textAppearanceMedium"/>
		</android.support.v7.widget.CardView>
	</LinearLayout>

</ScrollView>