<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:fitsSystemWindows="true"
	tools:context="com.nkyrim.thessapp.ui.activities.AboutActivity">

	<android.support.design.widget.AppBarLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<android.support.v7.widget.Toolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			android:background="?attr/colorPrimary"
			app:popupTheme="@style/AppTheme.PopupOverlay"/>

	</android.support.design.widget.AppBarLayout>

	<android.support.v4.widget.NestedScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		app:layout_behavior="@string/appbar_scrolling_view_behavior">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical"
			android:padding="6dp">

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				app:contentPadding="6dp">

				<TextView
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:text="@string/sbout_message"
					android:textAppearance="?android:attr/textAppearanceMedium"/>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				android:clickable="true"
				android:foreground="?selectableItemBackground"
				android:onClick="showIntro">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:orientation="vertical">

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:background="@color/east_bay_blue"
						android:padding="5dp"
						android:text="@string/help"
						android:textAppearance="@style/MainActivityCardTitle"/>

					<TextView
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:padding="5dp"
						android:text="@string/help_message"
						android:textAppearance="?android:attr/textAppearanceSmall"/>
				</LinearLayout>
			</android.support.v7.widget.CardView>

			<android.support.v7.widget.CardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="5dp"
				app:contentPadding="6dp">

				<TextView
					android:id="@+id/txtCredits"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:autoLink="all"/>
			</android.support.v7.widget.CardView>

		</LinearLayout>

	</android.support.v4.widget.NestedScrollView>

	<android.support.design.widget.FloatingActionButton
		android:id="@+id/fab"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="bottom|end"
		android:layout_margin="@dimen/fab_margin"
		android:src="@android:drawable/ic_dialog_email"/>

</android.support.design.widget.CoordinatorLayout>
